# FFNN

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data.csv  nn
include/: CSV.hpp  Matrix.hpp  NeuralNetwork.hpp  Topology.hpp
src/: CSV.cpp  Matrix.cpp  NeuralNetwork.cpp  Topology.cpp  main.cpp
